--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.16",
+    "react-router-dom": "^6.26.2",
     "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
